--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "gsap": "^3.12.5",
     "next": "14.1.4",
     "react": "^18",
+    "react-collapse": "^5.1.1",
     "react-dom": "^18"
   },
   "devDependencies": {
